# DeckOfCards

./: CMakeLists.txt  README.MD  main.cpp
lib/: games.cpp  games.h  logger.cpp  logger.h
lib/core/: deck.h  hand.h  piles.cpp  piles.h  player.h
lib/core/base_classes/: CMakeLists.txt  cards.cpp  cards.h  games.cpp  games.h  player.cpp  player.h  set.cpp  set.h  suit.cpp  suit.h
lib/core/custom_classes/: CMakeLists.txt  deck.cpp  deck.h  hand.cpp  hand.h  piles.h
lib/core/utils/: CMakeLists.txt  patternChecker.cpp  patternChecker.h  set.cpp  set.h
lib/core/utils/card/: cards.cpp  cards.h  suit.cpp  suit.h
lib/tests/: test_Cards.cc  test_Deck.cc  test_Game.cc  test_Hand.cc  test_PatternChecker.cc  test_Piles.cc  test_Player.cc  test_Set.cc  test_Suit.cc
